--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>MarketData</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TEP5F5EBQ"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
